@startuml business_logic
title Business logic V2.0
hide empty members

Class MasterController{
}
class DetailsController{
    id: String
    DetailsController(String id)
}
class GetGithubIssuesUseCase
{

}
class GetGithubIssueUseCase
{
    
}
class GetGithubIssuesUseCaseParameter
{
    page : int
    pageSize: int
}
class GetGithubIssueUseCaseParameter
{
    id: String
}

interface IGetGithubIssues
{
    getIssues(int page, int pageSize) : Future<List<GithubIssueData>>
}    
interface IGetGithubIssue
{
    getIssue(String id) : Future<GithubIssueDetailedData>
}

class DataGithubRepository
{

}
abstract class GithubRepository{
    GithubRepository(String token)
    -isConfigured : bool
    isConfigured() : bool
    configure(String token): Future<void>
}
MasterController ..> GetGithubIssuesUseCase
DetailsController ..> GetGithubIssueUseCase
GetGithubIssueUseCase ..> GetGithubIssueUseCaseParameter
GetGithubIssuesUseCase ..> GetGithubIssuesUseCaseParameter

GithubRepository ..|> IGetGithubIssues
GithubRepository ..|> IGetGithubIssue
DataGithubRepository --|> GithubRepository
GetGithubIssueUseCase ..> IGetGithubIssue
GetGithubIssuesUseCase ..> IGetGithubIssues

@enduml